# tom_tns

./: .gitignore  README.md  manage.py  pyproject.toml
.github/workflows/: github-release.yml  pypi-release.yml  run-tests.yml
tom_tns/: __init__.py  apps.py  forms.py  hermes_api.py  tests.py  tns_api.py  tns_report.py  urls.py  views.py
tom_tns/templates/tom_tns/: tns_report.html
tom_tns/templates/tom_tns/partials/: tns_button.html  tns_classify_form.html  tns_report_form.html
tom_tns/templatetags/: tns_extras.py
tom_tns/tests/: boot_django.py  run_tests.py
tom_tns_base/: asgi.py  settings.py  urls.py  wsgi.py
