[tool.poetry]
name = "tom-tns"
version = "0.0.0"
description = "TOMtoolkit module for reporting transients to the TNS"
authors = ["Joseph Chatelain <jchatelain@lco.global>"]
license = "GPL-3.0-or-later"
readme = "README.md"
packages = [{include = "tom_tns"}]

[tool.poetry.dependencies]
python = "^3.8.1,<3.12"
tomtoolkit = "^2.18"

[tool.poetry.group.lint.dependencies]
flake8 = ">=6.0,<7.2"

[tool.poetry-dynamic-versioning]
enable = true
vcs = "git"
style = "pep440"
# the default pattern regex makes the 'v' manditory
# this pattern modifies the default regex in order to make the 'v' optional
# ('v' becomes '[v]?' meaning a single v, [v], and ? means optional)
pattern = "(?x)^[v]?((?P<epoch>\\d+)!)?(?P<base>\\d+(\\.\\d+)*)([-._]?((?P<stage>[a-zA-Z]+)[-._]?(?P<revision>\\d+)?))?(\\+(?P<tagged_metadata>.+))?$"

# substitute version not only in pyproject.toml (which the config block above does)
# but also the __version__.py file
[tool.poetry-dynamic-versioning.substitution]


[build-system]
requires = ["poetry-core>=1.0.0", "poetry-dynamic-versioning"]
build-backend = "poetry_dynamic_versioning.backend"
# poetry_dynamic_versioning.backend is a thin wrapper around the standard build-backend = "poetry.core.masonry.api"

